--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -1,2 +1,20 @@
-body
-    background: red
+*
+    box-sizing: border-box
+    // border: 1px solid red
+
+html, body
+    background-color: red
+    margin: 0
+    padding: 0
+    width: 100%
+
+.flex
+    display: flex
+    align-items: center
+
+.flex-column
+    display: flex
+    flex-direction: column
+    align-items: center
+
+@import './home/header'
