--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -1,9 +1,7 @@
 *
     box-sizing: border-box
-    // border: 1px solid red
 
 html, body
-    background-color: red
     margin: 0
     padding: 0
     width: 100%
@@ -17,4 +15,48 @@ html, body
     flex-direction: column
     align-items: center
 
+.min-full-size
+    width: 100%
+    height: 100%
+
+.full-w
+    width: 100%
+
 @import './home/header'
+
+.top
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, .6), rgba(0, 0, 0, .6)), url('/static/img/cdj-m.jpg');
+    background-size: cover
+    position: relative
+    max-height: calc(100vh - 100px)
+    overflow: hidden
+    color: white
+
+.video-container
+    display: none
+
+@media(min-width:768px)
+    .top
+        background-image: none
+
+    .video-container
+        position: absolute
+        display: block
+        left: 0
+        top: 0
+        width: 100%
+        z-index: -100
+        overflow: hidden
+
+        .filter
+            z-index: 100
+            position: absolute
+            background: rgba(0, 0, 0, 0.4)
+            width: 100%
+            height: 100%
+
+        video
+            z-index: 0
+            width: 100%
+            height: 100%
+            min-height: 100%
