--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -37,10 +37,17 @@
 				<a href="#"><li>Cursos</li></a>
 			</ul>
 		</header>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
+		<div class="top">
+			<div class="video-container">
+				<div class="filter"></div>
+				<video autoplay loop class="full-w">
+					<source src="{% static 'videos/people-dancing.mp4' %}" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+					<source src="{% static 'videos/people-dancing.webm' %}" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+				</video>
+			</div>
+			<div class="flex-column min-full-size">
+				<h1>Drones</h1>
+			</div>
+		</div>
 	</body>
 </html>
