--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -115,6 +115,13 @@
 				</div>
 				<div class="flex-column project_small">
 					<div class="full-w img-container">
+						<div class="project_small-overlay flex justify-center">
+							<div class="flex">
+								<a href="" class="o-button">Ampliar</a>
+								<a href="" class="o-button">Info</a>
+								<a href="" class="o-button">Lançar</a>
+							</div>
+						</div>
 						<img src="{% static 'img/HOME2.jpg' %}" alt="">
 					</div>
 					<div class="flex-column start full-w project_description">
@@ -129,6 +136,13 @@
 				</div>
 				<div class="flex-column project_small">
 					<div class="full-w img-container">
+						<div class="project_small-overlay flex justify-center">
+							<div class="flex">
+								<a href="" class="o-button">Ampliar</a>
+								<a href="" class="o-button">Info</a>
+								<a href="" class="o-button">Lançar</a>
+							</div>
+						</div>
 						<img src="{% static 'img/HOME2.jpg' %}" alt="">
 					</div>
 					<div class="flex-column start full-w project_description">
