--- a/home/static/home/styl/home/top.styl
+++ b/home/static/home/styl/home/top.styl
@@ -30,6 +30,7 @@
             z-index: 100
             position: absolute
             background: filtercolor
+            background: rgba(0, 0, 0, .0)
             width: 100%
             height: 100%
 
