Adds myview video

--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -45,6 +45,9 @@ body
 .bg-light
     background-color: lightbg
 
+.text-center
+    text-align center
+
 .section-title_container
     height: 252px
 
