--- a/home/static/home/styl/home/top.styl
+++ b/home/static/home/styl/home/top.styl
@@ -6,8 +6,14 @@
     overflow: hidden
     color: white
     
-    .title
+    .title, .subtitle
         color: white
+
+    // .title
+        
+    .subtitle
+        text-transform none
+        font-weight 400
 
 .video-container
     display: none
@@ -29,8 +35,8 @@
         .filter
             z-index: 100
             position: absolute
-            background: filtercolor
-            background: rgba(0, 0, 0, .0)
+            // background: filtercolor
+            background: rgba(0, 0, 0, .5)
             width: 100%
             height: 100%
 
