--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -38,20 +38,22 @@
 				<a href="#"><li>Cursos</li></a>
 			</ul>
 		</header>
-		<div class="top triangles">
+		<div class="top triangles text-center">
 			<div class="video-container">
 				<div class="filter"></div>
-				<video autoplay loop class="full-w">
-					<source src="{% static 'videos/people-dancing.mp4' %}" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-					<source src="{% static 'videos/people-dancing.webm' %}" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+				<video autoplay loop class="full-w" muted>
+					<source src="{% static 'videos/myview.mp4' %}" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+					<source src="{% static 'videos/myview.webm' %}" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
 				</video>
 			</div>
 			<div class="flex-column min-full-size justify-center">
-				<h1 class="title">Serviços com Drones</h1>
+				<h1 class="title big">Soluções com Drones</h1>
+				<p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				<a href="" class="o-button">Contato</a>
 			</div>
 		</div>
 		<div class="flex justify-center section-title_container">
-			<h2 class="title dark">Quem Somos</h2>
+			<h2 class="title dark text-center">Quem Somos</h2>
 		</div>
 		<div class="flex-column justify-center description">
 			<div class="description-content">
@@ -61,7 +63,7 @@
 		</div>
 		<div class="flex paraxify justify-center triangles service-title">
 			<div class="overlay"></div>
-			<h2 class="title white big">Nossos Serviços</h2>
+			<h2 class="title white big text-center">Nossos Serviços</h2>
 		</div>
 		<div class="flex full-w service-item_container">
 			<div class="flex-column service-item">
@@ -106,7 +108,7 @@
 			</div>
 		</div>
 		<div class="flex justify-center bg-light section-title_container">
-			<h2 class="title dark">Projetos Recentes</h2>
+			<h2 class="title dark text-center">Projetos Recentes</h2>
 		</div>
 		<div class="flex-column full-w">
 			<div class="project-container full-w">
