--- a/home/static/home/styl/home/top.styl
+++ b/home/static/home/styl/home/top.styl
@@ -2,7 +2,7 @@
     background-image: linear-gradient(180deg, filtercolor, filtercolor), url('/static/img/top.jpg');
     background-size: cover
     position: relative
-    max-height: calc(100vh - 100px)
+    height: calc(100vh - 100px)
     overflow: hidden
     color: white
     
