--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -52,11 +52,11 @@ body
     height: 252px
 
 .title
-    font-size: 32px
+    font-size: 24px
     letter-spacing: 2px
     text-transform: uppercase
     &.big
-        font-size: 45px
+        font-size: 30px
         letter-spacing: 5px
 
 .subtitle
@@ -127,6 +127,13 @@ body
     &:hover, &:active, &:focus
         background-color: secondarycolor
         color: white
+
+@media(min-width:768px)
+    .title
+        font-size: 32px
+        &.big
+            font-size: 45px
+
 
 @import './home/header'
 @import './home/top'
