--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -41,7 +41,7 @@
 		<div class="top triangles text-center">
 			<div class="video-container">
 				<div class="filter"></div>
-				<video autoplay loop class="full-w" muted>
+				<video autoplay loop controls="true" class="full-w" muted>
 					<source src="{% static 'videos/myview.mp4' %}" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
 					<source src="{% static 'videos/myview.webm' %}" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
 				</video>
@@ -151,6 +151,18 @@
 						<span class="dark-label">Web Design</span>
 						<p class="light-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
 					</div>
+				</div>
+			</div>
+		</div>
+		<div class="flex-column">
+			<br><br><br><br>
+			<h2 class="title dark text-center">Nossos Clientes</h2>
+			<div class="clients-container flex justify-center">
+				<div class="flex-column client text-center">
+					<img class="client-img" src="{% static 'img/avatar.jpg' %}" alt="">
+					<p class="dark-label client-name">Nome do Cliente</p>
+					<span class="light-text">Área ou setor</span>
+					<p class="testimonial">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore eum accusamus delectus libero quo eaque soluta aliquam pariatur nihil quisquam ex ab, ratione alias, neque facere! Numquam labore rerum facilis?</p>
 				</div>
 			</div>
 		</div>
