--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -11,6 +11,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		{% load static %}
+		<link rel="stylesheet" href='{% static "css/home.css" %}'>
 		<script type='text/javascript' src='{% static "home.js" %}'></script>
 	</head>		
 	<body>
