--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -173,4 +173,7 @@ body
         input, textarea
             &.half-form
                 width 48%
-                        
+
+.footer
+    background-color darkcolor
+    padding 2.5rem 0
