--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -193,5 +193,8 @@
 				<button class="button">Enviar</button>
 			</div>
 		</div>
+		<footer class="footer flex justify-center white">
+			<span class="detail-text">Copyright © 2017 MyView</span>
+		</footer>
 	</body>
 </html>
