Adds template inheritance

--- a/home/static/home/styl/home/header.styl
+++ b/home/static/home/styl/home/header.styl
@@ -8,9 +8,11 @@
         height: 294px
 
     a
+        font-family: 'Montserrat', sans-serif
         color: darkgraycolor
         letter-spacing: 1px
         text-decoration: none
+        transition all 400ms ease
     
         &:hover, &:focus, &:active
             color: secondarycolor
