--- a/home/static/home/styl/home/project.styl
+++ b/home/static/home/styl/home/project.styl
@@ -12,7 +12,7 @@
         .project_small-overlay
             transform scale(1, 1)
             background-color rgba(0, 0, 0, .8)
-            .o-button:first-child, .o-button:last-child
+            .button-square:first-child, .button-square:last-child
                 transform translateX(0)
 
 .project_big, .project_small
@@ -36,16 +36,16 @@
     z-index 100
     background-color rgba(0, 0, 0, .0)
     transition 600ms all ease
-    .o-button
+    .button-square
         margin-right: 5px
         
-    .o-button:first-child, .o-button:last-child
+    .button-square:first-child, .button-square:last-child
         transition 600ms all ease-out
     
-    .o-button:first-child
+    .button-square:first-child
         transform translateX(-100%)
         
-    .o-button:last-child
+    .button-square:last-child
         margin-right: 0
         transform translateX(100%)
         
