--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -18,6 +18,10 @@ body
     font-family: 'Raleway', sans-serif
     color: darkcolor
 
+h1, h2, h3, h4, h5, h6
+    font-family: 'Montserrat', sans-serif
+    font-weight 400
+
 .flex
     display: flex
     align-items: center
@@ -69,6 +73,7 @@ body
     text-transform: uppercase
 
 .dark-label
+    font-family: 'Montserrat', sans-serif
     color: darkcolor
     font-size: 14px
     text-transform: uppercase
