--- a/home/static/home/styl/home/form.styl
+++ b/home/static/home/styl/home/form.styl
@@ -20,7 +20,8 @@ input, textarea
 input
     height 46px
     
-.button, .icon-button
+.button, .icon-button, .o-button
+    font-family: 'Montserrat', sans-serif
     color white
     letter-spacing 1px
     font-size 13px
@@ -38,6 +39,15 @@ input
         background-color: darkcolor
         border-color darkcolor
 
+.o-button
+    padding 15px 28px
+    border-radius 30px
+    color white
+    border 2px solid white
+    &:hover, &:active, &:focus
+        color secondarycolor
+        border-color secondarycolor
+
 .icon-button
     border-radius 25px
     height 50px
@@ -52,7 +62,8 @@ input
         background-color: secondarycolor
         border-color secondarycolor
 
-.o-button
+.button-square
+    font-family: 'Montserrat', sans-serif
     color: secondarycolor
     background-color rgba(0, 0, 0, .0)
     border: 2px solid secondarycolor
