--- a/home/static/home/styl/home/top.styl
+++ b/home/static/home/styl/home/top.styl
@@ -1,3 +1,5 @@
+topfiltercolor = rgba(0, 0, 0, .4)
+
 .top
     background-image: linear-gradient(180deg, filtercolor, filtercolor), url('/static/img/top.jpg');
     background-size: cover
@@ -8,8 +10,13 @@
     
     .title, .subtitle
         color: white
+    
+    .title
+        margin-bottom .5rem
 
     .subtitle
+        font-size 1rem
+        margin-bottom 4rem
         text-transform none
         font-weight 400
 
@@ -19,7 +26,6 @@
 @media(min-width:768px)
     .top
         background-image: none
-        
 
     .video-container
         position: absolute
@@ -33,8 +39,7 @@
         .filter
             z-index: 100
             position: absolute
-            // background: filtercolor
-            background: rgba(0, 0, 0, .5)
+            background: topfiltercolor
             width: 100%
             height: 100%
 
